src/sfdc/force-app/main/default/objects/B2C_CRMSync_Setting__mdt/B2C_CRMSync_Setting__mdt.object-meta.xml
<CustomObject>
    <description>... global configuration settings for B2C CRM Sync; manages instances of configuration settings for the B2C Commerce integration package.</description>
    <label>B2C CRM Sync Configuration Settings</label>
    <pluralLabel>B2C CRM Sync Configuration Settings</pluralLabel>
</CustomObject>