src/sfdc/force-app/main/default/objects/B2C_CRMSync_Setting__mdt/fields/Account_Contact_Model__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact_Model__c</fullName>
    <label>Account Contact Model</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Person</fullName>
                <default>true</default>
                <label>Person</label>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>