src/sfdc/force-app/main/default/objects/B2C_CRMSync_Setting__mdt/fields/Apply_B2CCustomerList_ClientIDToSites__c.field-meta.xml
<CustomField>
    <fullName>Apply_B2CCustomerList_ClientIDToSites__c</fullName>
    <defaultValue>false</defaultValue>
    <description>... when enabled, any new records or updates to a B2C Commerce ClientID will be automatically applied to all child sites.</description>
    <inlineHelpText>... when enabled, any new records or updates to a B2C Commerce ClientID will be automatically applied to all child sites.</inlineHelpText>
    <label>Apply B2C CList ClientID to Sites</label>
    <type>Checkbox</type>
</CustomField>