src/sfdc/force-app/main/default/objects/B2C_CRMSync_Setting__mdt/fields/B2C_CRM_Sync_AuthToken_Settings__c.field-meta.xml
<CustomField>
    <fullName>B2C_CRM_Sync_AuthToken_Settings__c</fullName>
    <description>... represents the authToken configuration settings that are mapped to a set of b2c-crm-sync configuration settings.</description>
    <inlineHelpText>... represents the authToken configuration settings that are mapped to a set of b2c-crm-sync configuration settings.</inlineHelpText>
    <label>B2C CRM Sync AuthToken Settings</label>
    <referenceTo>B2C_CRM_Sync_AuthToken_Settings__mdt</referenceTo>
    <relationshipLabel>B2C CRM Sync Configuration Settings</relationshipLabel>
    <relationshipName>B2C_CRM_Sync_Configuration_Settings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>