src/sfdc/force-app/main/default/objects/B2C_CRMSync_Setting__mdt/fields/Default_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Default_Account_Name__c</fullName>
    <description>... represents the default name to use for a B2C Account if one was not provided or could not be calculated from the child Contact properties.</description>
    <inlineHelpText>... represents the default name to use for a B2C Account if one was not provided or could not be calculated from the child Contact properties.</inlineHelpText>
    <label>Default Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>