src/sfdc/force-app/main/default/objects/B2C_CRMSync_Setting__mdt/fields/Enable_B2C_Update_Counts_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Enable_B2C_Update_Counts_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>... managed whether the B2C Update Counts trigger is enabled and used to calculate site and customerList counts.</description>
    <inlineHelpText>... managed whether the B2C Update Counts trigger is enabled and used to calculate site and customerList counts.</inlineHelpText>
    <label>Enable B2C Update Counts Trigger</label>
    <type>Checkbox</type>
</CustomField>