src/sfdc/force-app/main/default/objects/B2C_CRMSync_Setting__mdt/fields/Enable_Client_ID_CertValidation_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Enable_Client_ID_CertValidation_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>... this checkbox manages the behavior of the B2C Client ID certValidation trigger; when enabled -- it verifies that the JWT Certificate name maps to an existing Salesforce certificate.</description>
    <inlineHelpText>... this checkbox manages the behavior of the B2C Client ID certValidation trigger; when enabled -- it verifies that the JWT Certificate name maps to an existing Salesforce certificate.</inlineHelpText>
    <label>Enable Client ID CertValidation Trigger</label>
    <type>Checkbox</type>
</CustomField>