src/sfdc/force-app/main/default/objects/B2C_CRMSync_Setting__mdt/listViews/B2C_CRM_Sync_Configuration_Settings.listView-meta.xml
<ListView>
    <fullName>B2C_CRM_Sync_Configuration_Settings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Enable_B2C_Process_Contact_Trigger__c</columns>
    <filterScope>Everything</filterScope>
    <label>B2C CRM Sync : Configuration Settings</label>
</ListView>